--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ packages = [{include = "nn_zero_to_hero"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+numpy = "^1.24.1"
+matplotlib = "^3.6.3"
+graphviz = "^0.20.1"
+torch = "^1.13.1"
 
 
 [tool.poetry.group.dev.dependencies]
